# NostraSocketWrapper

./: .travis.yml  CMakeLists.txt  README  README.md  error_mappings.txt
cmake/: CPackConfig.cmake.in  INSTALL_README.md  NostraSocketWrapperConfig.cmake.in  welcome.txt
doc/: Doxyfile.in  style.css
include/nostrasocketwrapper/: error.h  platdect.h  socket.h
src/: error.c  socket.c
test/: error.wt.c  error.wt.cpp  socket.wt.c
test/error.wt.d/src/: error.wt.c
test/socket.wt.d/src/: socket.wt.c
